--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header class="header">
+        <div class="container header-inner">
         <nav class="header-nav">
             <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul class="header-menu">
@@ -26,14 +27,18 @@
                 <li class="header-contacts-item"><a class="header-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
     <main class="main">
-        <section class="main-section">
+         <section class="main-section section">
+            <div class="container">
             <h1 class="main-title">Effective Solutions for Your Business</h1>
             <button class="main-button" type="button">Order Service</button>
+            </div>
         </section>
-        <section class="benefits">
-            <h2 class="benefits-title-hidden">Benefits</h2>
+        <section class="benefits section">
+            <h2 class="benefits-title-hidden visually-hidden">Benefits</h2>
+            <div class="container benefits-inner"> 
             <ul class="benefits-list">
             <li class="benefits-item">
                 <h3 class="benefits-item-title">Strategy</h3>
@@ -60,71 +65,95 @@
                 </p>
             </li>
             </ul>
+            </div>
         </section>
-        <section class="team">
+        <section class="team-section section container">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
                 <li class="team-member">
                     <img class="team-photo" src="./images/markguerrero1.jpg" width="264" alt="Mark Guerrero">
+                    <div class="team-text">
                         <h3 class="team-name">Mark Guerrero</h3>
                         <p class="team-role">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-member">
                     <img class="team-photo" src="./images/tomford2.jpg" width="264" alt="Tom Ford">
+                    <div class="team-text"> 
                         <h3 class="team-name">Tom Ford</h3>
                         <p class="team-role">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-member">
                     <img class="team-photo" src="./images/camilagarcia3.jpg" width="264" alt="Camila Garcia">
+                    <div class="team-text"> 
                         <h3 class="team-name">Camila Garcia</h3>
                         <p class="team-role">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-member">
                     <img class="team-photo" src="./images/danielwilson4.jpg" width="264" alt="Daniel Wilson">
+                    <div class="team-text"> 
                         <h3 class="team-name">Daniel Wilson</h3>
                         <p class="team-role">UI Designer</p>
+                    </div>
                 </li>
             </ul>
+            </div>
              </section>
-             <section class="portfolio">
+             <section class="portfolio section container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <img class="portfolio-img" src="./images/app1.jpg" width="360" alt="Banking App">
+                        <div class="portfolio-border"> 
                             <h3 class="portfolio-item-title">Banking App</h3>
                             <p class="portfolio-item-text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-img" src="./images/cashlesspayment.jpg" width="360" alt="Cashless Payment">
+                        <div class="portfolio-border"> 
                             <h3 class="portfolio-item-title">Cashless Payment</h3>
                             <p class="portfolio-item-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-img" src="./images/app2.jpg" width="360" alt="Meditation App">
+                        <div class="portfolio-border"> 
                             <h3 class="portfolio-item-title">Meditation App</h3>
                             <p class="portfolio-item-text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-img" src="./images/taxiservice.jpg" width="360" alt="Taxi Service">
+                        <div class="portfolio-border"> 
                             <h3 class="portfolio-item-title">Taxi Service</h3>
                             <p class="portfolio-item-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-img" src="./images/screenillustrations.jpg" width="360" alt="Screen Illustrations">
+                        <div class="portfolio-border"> 
                             <h3 class="portfolio-item-title">Screen Illustrations</h3>
                             <p class="portfolio-item-text">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img class="portfolio-img" src="./images/onlinecourses.jpg" width="360" alt="Online Courses">
+                        <div class="portfolio-border"> 
                             <h3 class="portfolio-item-title">Online Courses</h3>
                             <p class="portfolio-item-text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
              </section>
     </main>
     <footer class="footer">
+        <div class="container">
         <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
