--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             </ul>
             </div>
         </section>
-        <section class="team-section section container">
+        <section class="team-section section">
+            <div class="container"> 
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
                 <li class="team-member">
