--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
         </section>
         <section class="benefits section">
+            <div class="container"> 
             <h2 class="benefits-title-hidden visually-hidden">Benefits</h2>
-            <div class="container benefits-inner"> 
             <ul class="benefits-list">
             <li class="benefits-item">
                 <h3 class="benefits-item-title">Strategy</h3>
@@ -102,7 +102,8 @@
             </ul>
             </div>
              </section>
-             <section class="portfolio section container">
+             <section class="portfolio section">
+                <div class="container"> 
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
@@ -148,6 +149,7 @@
                         </div>
                     </li>
                 </ul>
+                </div>
              </section>
     </main>
     <footer class="footer">
